# rust-to-nodejs-overhead-benchmark

./: .gitignore  .yarnrc.yml  Cargo.toml  README.md  benchmark.mjs  build.js  package.json
napi-rs/: Cargo.toml
napi-rs-compact/: Cargo.toml
napi-rs-compact/src/: lib.rs
napi-rs/src/: lib.rs
neon/: Cargo.toml
neon/src/: lib.rs
node-bindgen/: Cargo.toml  build.rs
node-bindgen/src/: lib.rs
tcp-ipc/: Cargo.toml
tcp-ipc/lib/: index.js
tcp-ipc/src/: lib.rs
