[package]
edition = "2018"
name = "napi-rs-compact-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {git = "https://github.com/napi-rs/napi-rs", branch = "napi_bindgen", features = ["latin1", "compat-mode"]}
napi-derive = {git = "https://github.com/napi-rs/napi-rs", branch = "napi_bindgen", features = ["compat-mode"]}

[build-dependencies]
napi-build = {git = "https://github.com/napi-rs/napi-rs", branch = "napi_bindgen"}
