[package]
edition = "2018"
name = "napi-rs-compact-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {path = "../../napi-rs/crates/napi", features = ["latin1", "compat-mode"]}
napi-derive = {path = "../../napi-rs/crates/macro", features = ["compat-mode"]}

[build-dependencies]
napi-build = {path = "../../napi-rs/crates/build"}
