[package]
edition = "2018"
name = "napi-rs-compact-example"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = {version = "2.0.0-alpha.0", features = ["latin1", "compat-mode"]}
napi-derive = {version = "2.0.0-alpha.0", features = ["compat-mode"]}

[build-dependencies]
napi-build = "1"
